--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,17 @@
 * {
     box-sizing: border-box;
 }
+
+body,
+h1,
+h2,
+p,
+figure,
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+
 a {
     text-decoration: none;
 }
