--- a/css/estilo.css
+++ b/css/estilo.css
@@ -90,3 +90,34 @@ nav h2 a:focus,
 
     background-color: var(#fff);
 }
+@media screen and (min-width: 570px) {
+    nav h2 {
+        display: none;
+    }
+
+    .links-menu {
+        display: flex;
+    }
+
+    nav {
+        width: 60%;
+    }
+
+    .links-menu li {
+        width: 100%;
+    }
+
+    .front-end img {
+        height: 150px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    html {
+        font-size: 18px;
+    }
+
+    .limitador {
+        max-width: 1000px;
+    }
+}
