--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -5,7 +5,11 @@
 /* estilização do menu */
 
 nav {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 
