--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -30,6 +30,8 @@ nav h2 a:focus,
 .links-menu {
   list-style: none;
   display: none;
+  margin: 0;
+  padding: 0;
 }
 
 .links-menu a {
@@ -39,6 +41,7 @@ nav h2 a:focus,
   height: 50px;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
 }
 
 .links-menu.aberto {
@@ -48,6 +51,10 @@ nav h2 a:focus,
   left: 0;
   right: 0;
   background-color: var(#fafafa);
+  padding: 1rem;
+}
+.links-menu.aberto li {
+  margin: 0 1rem;
 }
 
 /* ----------------------------------------------------------------------- */
