--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -4,10 +4,11 @@
 
 /* estilização do menu */
 nav {
-  position: relative;
+  position: absolute;
   width: 100%;
   background-color: #333;
   color: #fff;
+  top: 100px;
 }
 
 nav button {
