--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -4,11 +4,10 @@
 
 /* estilização do menu */
 nav {
-  position: absolute;
+  position: relative;
   width: 100%;
   background-color: #333;
   color: #fff;
-  top: 100px;
 }
 
 nav button {
@@ -17,37 +16,29 @@ nav button {
   color: #fff;
   padding: 10px;
   cursor: pointer;
+  display: none;
 }
 
 nav ul {
   list-style: none;
   padding: 0;
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
 }
 
 nav ul li {
   padding: 10px;
-  border-bottom: 1px solid #ddd;
-}
-
-nav ul li:last-child {
-  border-bottom: none;
 }
 
 nav ul li a {
-  color: #333;
+  color: #fff;
   text-decoration: none;
   display: block;
 }
 
 nav ul li a:hover {
   background-color: #ddd;
+  color: #333;
 }
 
 .dropdown {
@@ -57,8 +48,8 @@ nav ul li a:hover {
 .dropdown-menu {
   display: none;
   position: absolute;
-  top: 0;
-  left: 100%;
+  top: 100%;
+  left: 0;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -188,5 +179,45 @@ header {
 
   .links-menu li {
     width: 100%;
+  }
+}
+/* menu responsivo */
+@media (max-width: 768px) {
+  nav button {
+    display: block;
+  }
+
+  nav ul {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+
+  nav ul li {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  nav ul li:last-child {
+    border-bottom: none;
+  }
+
+  nav ul li a {
+    color: #333;
+    text-decoration: none;
+    display: block;
+  }
+
+  nav ul li a:hover {
+    background-color: #ddd;
+  }
+
+  .dropdown-menu {
+    position: relative;
   }
 }
