--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -156,9 +156,47 @@ header {
   color: #fff;
   border-radius: 8px;
 }
-/* --------------calcinhas------------------ */
+/* destaques */
+.carousel {
+  position: relative;
+  width: 100%;
+  max-width: 600px; /* Ajuste conforme necessário */
+  margin: 20px auto;
+  overflow: hidden;
+}
 
+.carousel-inner {
+  display: flex;
+  width: 300%;
+  transition: transform 0.5s ease;
+}
 
+.carousel-item {
+  width: 33.33333%;
+  flex-shrink: 0;
+  display: block;
+}
+
+.carousel-control {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+  color: white;
+  background-color: black;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 100;
+}
+
+.carousel-control.prev {
+  left: 10px;
+}
+
+.carousel-control.next {
+  right: 10px;
+}
 
 
 /* -------------------------------menu responsivo--------------------------- */
