--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -156,23 +156,24 @@ header {
   color: #fff;
   border-radius: 8px;
 }
-/* destaques */
+/* -------------------------destaques-----------------------*/
 .carousel {
   position: relative;
   width: 100%;
-  max-width: 600px; /* Ajuste conforme necessário */
+  max-width: 500px; /* Adapte ao design do seu site */
   margin: 20px auto;
   overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 }
 
 .carousel-inner {
   display: flex;
-  width: 300%;
-  transition: transform 0.5s ease;
+  width: 100%;
+  transition: transform 0.5s ease-in-out;
 }
 
 .carousel-item {
-  width: 33.33333%;
+  width: 100%; /* Correção para 100%/3 */
   flex-shrink: 0;
   display: block;
 }
@@ -183,11 +184,12 @@ header {
   transform: translateY(-50%);
   font-size: 24px;
   color: white;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   border: none;
   cursor: pointer;
   padding: 10px;
   z-index: 100;
+  border-radius: 50%;
 }
 
 .carousel-control.prev {
@@ -197,6 +199,11 @@ header {
 .carousel-control.next {
   right: 10px;
 }
+
+.carousel-control:hover, .carousel-control:focus {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 
 
 /* -------------------------------menu responsivo--------------------------- */
