--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -159,8 +159,8 @@ header {
 /* -------------------------destaques-----------------------*/
 .carousel {
   position: relative;
-  width: 100%;
-  max-width: 500px; /* Adapte ao design do seu site */
+  width: 800%;
+  max-width: 500px; 
   margin: 20px auto;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
