--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../imagens/bg-luzesvermelhas.jpg');
+  background-image: url('../imagens/fundo-teste.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
