--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -6,12 +6,10 @@ body {
 }
 
 /* estilos do carousel  */
-.carousel-inner {
-  height: 100vh;
-}
-
-.carousel-inner img {
-  height: 100vh;
+.carousel-item img {
+  object-fit: cover;
+  width: 100%;
+  height: 500px; /* Ajuste a altura conforme necessário */
 }
 
 /* Imagens principais */
@@ -43,21 +41,21 @@ body {
 
     /* Media query para telas grandes */
     @media (min-width: 1200px) {
-      .carousel-item {
+      .carousel-item img {
         height: 600px; 
       }
     }
     
     /* Media query para telas médias */
     @media (min-width: 768px) and (max-width: 1199px) {
-      .carousel-item {
+      .carousel-item img{
         height: 400px; 
       }
     }
     
     /* Media query para telas pequenas */
     @media (max-width: 767px) {
-      .carousel-item {
+      .carousel-item img {
         height: 300px; 
       }
     }
