--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -5,12 +5,7 @@ body {
   background-attachment: fixed;
 }
 
-/* estilos do carousel  */
-.carousel-item img {
-  object-fit: cover;
-  width: 100%;
-  height: 500px; /* Ajuste a altura conforme necessário */
-}
+
 
 /* Imagens principais */
 .imgs {
@@ -38,24 +33,22 @@ body {
   transform: scale(1.05);
 }
 
+.carousel-item img {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  max-height: 500px; /* Ajuste a altura */
+}
 
-    /* Media query para telas grandes */
-    @media (min-width: 1200px) {
-      .carousel-item img {
-        height: 600px; 
-      }
-    }
-    
-    /* Media query para telas médias */
-    @media (min-width: 768px) and (max-width: 1199px) {
-      .carousel-item img{
-        height: 400px; 
-      }
-    }
-    
-    /* Media query para telas pequenas */
-    @media (max-width: 767px) {
-      .carousel-item img {
-        height: 300px; 
-      }
-    }
+/* Responsividade */
+@media (max-width: 768px) {
+  .carousel-item img {
+    max-height: 300px;
+  }
+}
+
+@media (max-width: 576px) {
+  .carousel-item img {
+    max-height: 200px;
+  }
+}
