--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -33,35 +33,34 @@ body {
   transform: scale(1.05);
 }
 
-  /* Adiciona esta seção de CSS */
   .carousel-container {
-    margin: 0 auto; /* Centraliza o carrossel */
-    padding: 20px; /* Espaçamento nas bordas */
+    margin: 0 auto; 
+    padding: 20px; 
   }
 
   .carousel-item img {
     object-fit: cover;
     width: 100%;
     height: auto;
-    max-height: 500px; /* Ajuste a altura máxima conforme necessário */
+    max-height: 500px;
   }
 
   /* Responsividade */
   @media (min-width: 1200px) {
     .carousel-container {
-      max-width: 80%; /* Ajuste conforme necessário */
+      max-width: 80%;
     }
   }
 
   @media (max-width: 1199.98px) and (min-width: 992px) {
     .carousel-container {
-      max-width: 90%; /* Ajuste conforme necessário */
+      max-width: 90%; 
     }
   }
 
   @media (max-width: 991.98px) and (min-width: 768px) {
     .carousel-container {
-      max-width: 100%; /* Ajuste conforme necessário */
+      max-width: 100%; 
     }
     .carousel-item img {
       max-height: 300px;
