--- a/css/estyle-inicial.css
+++ b/css/estyle-inicial.css
@@ -4,22 +4,28 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+.navbar-brand {
+  margin-right: 0;
+}
 
-
+.navbar-brand img {
+  width: 50px;
+  height: auto;
+}
 
 /* Imagens principais */
 .imgs {
   display: flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center;
   gap: 1rem;
   padding: 2rem 0;
 }
 
 .imgs figure {
   margin: 0;
-  width: 100%; 
-  max-width: 600px; 
+  width: 100%;
+  max-width: 600px;
 }
 
 .imgs img {
@@ -33,42 +39,44 @@ body {
   transform: scale(1.05);
 }
 
+.carousel-container {
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.carousel-item img {
+  object-fit: contain;
+  width: 100%;
+  height: auto;
+  max-height: 700px;
+}
+
+/* Responsividade */
+@media (min-width: 1200px) {
   .carousel-container {
-    margin: 0 auto; 
-    padding: 20px; 
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 1199.98px) and (min-width: 992px) {
+  .carousel-container {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 991.98px) and (min-width: 768px) {
+  .carousel-container {
+    max-width: 100%;
   }
 
   .carousel-item img {
-    object-fit: cover;
-    width: 100%;
-    height: auto;
-    max-height: 500px;
+    max-height: 900px;
   }
+}
 
-  /* Responsividade */
-  @media (min-width: 1200px) {
-    .carousel-container {
-      max-width: 80%;
-    }
+@media (max-width: 767.98px) {
+  .carousel-item img {
+    max-height: 600px;
   }
+}
 
-  @media (max-width: 1199.98px) and (min-width: 992px) {
-    .carousel-container {
-      max-width: 90%; 
-    }
-  }
-
-  @media (max-width: 991.98px) and (min-width: 768px) {
-    .carousel-container {
-      max-width: 100%; 
-    }
-    .carousel-item img {
-      max-height: 300px;
-    }
-  }
-
-  @media (max-width: 767.98px) {
-    .carousel-item img {
-      max-height: 200px;
-    }
-  }
